--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -47,18 +45,18 @@ services:
     networks:
       - mithril-network
 
-  migrations:
-    build:
-      context: .
-      dockerfile: docker/migrations.Dockerfile
-    container_name: mithril-migrations
-    environment:
-      DATABASE_URL: "postgres://mithril:dev_password@postgres:5432/mithril"
-    depends_on:
-      postgres:
-        condition: service_healthy
-    networks:
-      - mithril-network
+  # migrations:
+  #   build:
+  #     context: .
+  #     dockerfile: docker/migrations.Dockerfile
+  #   container_name: mithril-migrations
+  #   environment:
+  #     DATABASE_URL: "postgres://mithril:dev_password@postgres:5432/mithril"
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #   networks:
+  #     - mithril-network
 
   api:
     build:
@@ -69,8 +67,8 @@ services:
       DATABASE_URL: "postgres://mithril:dev_password@postgres:5432/mithril"
       REDIS_URL: "redis://redis:6379"
       NATS_URL: "nats://nats:4222"
-      42_CLIENT_ID: ${42_CLIENT_ID:your_client_id}
-      42_CLIENT_SECRET: ${42_CLIENT_SECRET:-your_client_secret}
+      42_CLIENT_ID: $${42_CLIENT_ID}
+      42_CLIENT_SECRET: $${42_CLIENT_SECRET}
       42_REDIRECT_URI: "http://localhost:3000/api/auth/callback"
       LOG_LEVEL: "debug"
       PORT: "3000"
@@ -83,8 +81,8 @@ services:
         condition: service_healthy
       nats:
         condition: service_healthy
-      migrations:
-        condition: service_completed_successfully
+      # migrations:
+      #   condition: service_completed_successfully
     networks:
       - mithril-network
     restart: unless-stopped
@@ -109,7 +107,6 @@ services:
       context: .
       dockerfile: docker/worker.Dockerfile
     image: mithril-worker-image:latest
-    container_name: mithril-worker-${NODE_ID}
     ulimits:
       nproc:
         soft: 50
