--- a/exercises/regex/Regex.yaml
+++ b/exercises/regex/Regex.yaml
@@ -1,6 +1,6 @@
 id: "ex01_regex"
 title: "regex"
-type: "input"  # or "qcm", "text"
+type: "text"  # or "qcm", "program"
 language: "none"
 
 # Test execution
