--- a/exercises/regex/C_ex.yaml
+++ b/exercises/regex/C_ex.yaml
@@ -5,6 +5,7 @@ language: "c"
 
 # Compilation (if needed)
 build:
+  output: "out"
   command: "gcc -Wall -Wextra -Werror {submission} -o {output}"
   timeout: 30
 
@@ -20,6 +21,7 @@ tests:
     run: "./{output}"
     input: "tests/test2_input.txt"
     expected_output: "tests/test2_expected.txt"
+    timeout: 5
 
 # Validation rules
 validation:
